--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -66,27 +67,27 @@
                 <article class="primary-work work">
                     <div class="work-img work-1">
                         <div>
-                          <a href="https://stewk033.github.io/browser-quest/">
-                            <h3>Placeholder</h3>
-                            <h4>HTML/CSS/JS</h4>
+                          <a href="https://stewk033.github.io/gym-buddy/" target="_blank">
+                            <h3>Gym Buddy</h3>
+                            <h4>HTML/CSS</h4>
                           </a>
                         </div>
                     </div>
                     <div class="work-info">
-                        <h3>Placeholder</h3>
-                        <h4>HTML/CSS/JS</h4>
+                        <h3>Gym Buddy</h3>
+                        <h4>HTML/CSS</h4>
                     </div>
                 </article>
                 <div class="secondary-work">
                     <article class="work">
                         <div class="work-img-secondary work-2">
                             <div>
-                                <h3>Placeholder</h3>
+                                <h3>Password Generator</h3>
                                 <h4>HTML/CSS</h4>
                             </div>
                         </div>
                         <div class="work-info">
-                            <h3>Placeholder</h3>
+                            <h3>Password Generator</h3>
                             <h4>HTML/CSS</h4>
                         </div>
                     </article>
