--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#contact-me">Contact Me</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="https://github.com/stewk033/KevinS-Portfolio/blob/main/assets/docs/Kevin%20Stewart%20Resume.pdf">Resume</a>
           </li>
         </ul>
       </nav>
@@ -122,7 +122,7 @@
           <h3>My Information</h3>
           <address>
             Phone: 555.555.5555<br/>
-            Email: <a href="kevin.test.email@email.ca">kevin.test.email@email.ca</a><br/>
+            Email: <a href="mailto: kevin.test.email@email.com">kevin.test.email@email.com</a><br/>
             <a href="https://github.com/stewk033" target="_blank">GitHub</a>
           </address>
         </div>
