--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#contact-me">Contact Me</a>
           </li>
           <li>
-            <a href="https://github.com/stewk033/KevinS-Portfolio/blob/main/assets/docs/Kevin%20Stewart%20Resume.pdf">Resume</a>
+            <a href="assets/docs/Kevin Stewart Resume.pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </nav>
@@ -123,7 +123,7 @@
           <address>
             Phone: 555.555.5555<br/>
             Email: <a href="mailto: kevin.test.email@email.com">kevin.test.email@email.com</a><br/>
-            <a href="https://github.com/stewk033" target="_blank">GitHub</a>
+            See more of my work on <a href="https://github.com/stewk033" target="_blank">GitHub</a>
           </address>
         </div>
       </div>
