update to portfolio

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     <article class="work">
                         <div class="work-img-secondary work-2">
                             <div>
-                                <h3>Password Generator</h3>
-                                <h4>HTML/CSS</h4>
+                              <h3>Password Generator</h3>
+                              <h4>HTML/CSS</h4>  
                             </div>
                         </div>
                         <div class="work-info">
@@ -94,8 +94,10 @@
                     <article class="work">
                         <div class="work-img-secondary work-3">
                             <div>
-                                <h3>Calculator</h3>
-                                <h4>HTML/CSS</h4>
+                              <a href="https://stewk033.github.io/mario-kart-randomizer/" target="_blank">
+                                <h3>Mario Kart Randomizer</h3>
+                                <h4>HTML/CSS/JavaScript</h4>
+                              </a>
                             </div>
                         </div>
                         <div class="work-info">
