--- a/index.html
+++ b/index.html
@@ -80,16 +80,18 @@
                 </article>
                 <div class="secondary-work">
                     <article class="work">
-                        <div class="work-img-secondary work-2">
-                            <div>
-                              <h3>Password Generator</h3>
-                              <h4>HTML/CSS</h4>  
-                            </div>
-                        </div>
-                        <div class="work-info">
-                            <h3>Password Generator</h3>
-                            <h4>HTML/CSS</h4>
-                        </div>
+                      <div class="work-img-secondary work-2">
+                          <div>
+                            <a href="">
+                              <h3>HeroVerse</h3>
+                              <h4>HTML/CSS/JavaScript</h4>
+                            </a>
+                          </div>
+                      </div>
+                      <div class="work-info">
+                        <h3>HeroVerse</h3>
+                        <h4>HTML/CSS/JavaScript</h4>
+                      </div>
                     </article>
                     <article class="work">
                         <div class="work-img-secondary work-3">
