--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <article class="work">
                       <div class="work-img-secondary work-2">
                           <div>
-                            <a href="">
+                            <a href="https://agile-tor-28300.herokuapp.com/" target="_blank">
                               <h3>HeroVerse</h3>
                               <h4>HTML/CSS/JavaScript</h4>
                             </a>
